welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:4: error: not found: value baggleSeen
while(baggleSeen != 4) {
      ^RunFour:7: error: not found: value baggleSeen
		baggleSeen = baggleSeen + 1;
                ^